--- a/.github/workflows/check-run-handler.yml
+++ b/.github/workflows/check-run-handler.yml
@@ -9,10 +9,6 @@ jobs:
     # Only run this job if:
     # 1. The check run is from Azure Pipelines
     # 2. The check is associated with a pull request
-    if: |
-      github.event.check_run.name == 'Azure Pipeline' && 
-      github.event.check_run.pull_requests != null &&
-      github.event.check_run.pull_requests[0] != null
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -26,6 +22,11 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
+            console.log("event.check_run.name: ", github.event.check_run.name);
+            console.log("event.check_run.pull_requests: ", github.event.check_run.pull_requests);
+            if (github.event.check_run.pull_requests != null) {
+              console.log("event.check_run.pull_requests[0]: ", github.event.check_run.pull_requests[0]);
+            }
             // Dump the entire payload with proper formatting
             console.log('Full check run payload:');
             console.log(JSON.stringify(context.payload, null, 2));
