--- a/eng/pipelines/templates/stages/archetype-spec-gen-sdk.yml
+++ b/eng/pipelines/templates/stages/archetype-spec-gen-sdk.yml
@@ -179,6 +179,7 @@ extends:
                 optional_params="$optional_params --pr-number $(System.PullRequest.PullRequestNumber)"
                 specPrUrl="${{ parameters.SpecRepoUrl }}/pull/$(System.PullRequest.PullRequestNumber)"
                 sdk_gen_info="$sdk_gen_info spec PR: $specPrUrl"
+                echo "##vso[task.logissue type=information]pr#:$(System.PullRequest.PullRequestNumber)"
               fi
 
               if [ "${{ parameters.SpecBatchTypes }}" != "" ]; then
