--- a/specificationRepositoryConfiguration.json
+++ b/specificationRepositoryConfiguration.json
@@ -14,7 +14,8 @@
     },
     "azure-sdk-for-js": {
       "integrationRepository": "azure-sdk/azure-sdk-for-js",
-      "mainRepository": "Azure/azure-sdk-for-js"
+      "mainRepository": "jacktn/azure-sdk-for-js",
+      "mainBranch": "jacktn/test-error-js"
     },
     "azure-sdk-for-net": {
       "integrationRepository": "azure-sdk/azure-sdk-for-net",
