--- a/eng/pipelines/spec-gen-sdk.yml
+++ b/eng/pipelines/spec-gen-sdk.yml
@@ -25,6 +25,7 @@ pr:
   branches:
     include:
       - user/spec-gen-pipeline-testing
+      - user/raych1/runner-set-pipeline-variables
 
 extends:
   template: /eng/pipelines/templates/stages/archetype-spec-gen-sdk.yml
