--- a/.github/workflows/spec-gen-sdk-status.yml
+++ b/.github/workflows/spec-gen-sdk-status.yml
@@ -23,14 +23,16 @@ jobs:
           sparse-checkout: |
             .github
 
-      - name: Azure Login with Workload Identity Federation
+      - if: ${{ secrets.AZURE_CLIENT_ID != '' }}
+        name: Azure Login with Workload Identity Federation
         uses: azure/login@v1
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           allow-no-subscriptions: true
 
-      - name: Get ADO Token via Managed Identity
+      - if: ${{ secrets.AZURE_CLIENT_ID != '' }}
+        name: Get ADO Token via Managed Identity
         run: |
           # Get token for Azure DevOps resource
           ADO_TOKEN=$(az account get-access-token --resource "499b84ac-1321-427f-aa17-267ca6975798" --query "accessToken" -o tsv)
