--- a/.github/workflows/spec-gen-sdk-status.yml
+++ b/.github/workflows/spec-gen-sdk-status.yml
@@ -23,13 +23,17 @@ jobs:
           sparse-checkout: |
             .github
 
-      - if: ${{ secrets.AZURE_CLIENT_ID != '' }}
-        name: Azure Login with Workload Identity Federation
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          allow-no-subscriptions: true
+      - name: Azure Login with Workload Identity Federation
+        if: ${{ secrets.AZURE_CLIENT_ID != '' }}
+        env:
+          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+        run: |
+          echo "Logging in with az CLI"
+          az login --service-principal \
+            --username $AZURE_CLIENT_ID \
+            --tenant $AZURE_TENANT_ID \
+            --allow-no-subscriptions
 
       - if: ${{ secrets.AZURE_CLIENT_ID != '' }}
         name: Get ADO Token via Managed Identity
