--- a/.github/workflows/spec-gen-sdk-status.yml
+++ b/.github/workflows/spec-gen-sdk-status.yml
@@ -15,7 +15,7 @@ jobs:
     if: |
       github.event.check_run.check_suite.app.name == 'Azure Pipelines' &&
       contains(github.event.check_run.name, 'SDK Validation')
-    name: "SDK Validation - Status"
+    name: "SDK Validation Status"
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
@@ -23,8 +23,18 @@ jobs:
           sparse-checkout: |
             .github
 
+      - name: Check Azure Credentials
+        id: check-creds
+        run: |
+          if [ -n "${{ secrets.AZURE_CLIENT_ID }}" ]; then
+            echo "has_creds=true" >> $GITHUB_OUTPUT
+          else
+            echo "has_creds=false" >> $GITHUB_OUTPUT
+          fi
+
+      # Then use the output variable in the conditional for the Azure login step
       - name: Azure Login with Workload Identity Federation
-        if: ${{ secrets.AZURE_CLIENT_ID != '' }}
+        if: steps.check-creds.outputs.has_creds == 'true'
         env:
           AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
           AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
@@ -35,14 +45,15 @@ jobs:
             --tenant $AZURE_TENANT_ID \
             --allow-no-subscriptions
 
-      - if: ${{ secrets.AZURE_CLIENT_ID != '' }}
-        name: Get ADO Token via Managed Identity
+      # Also use the same output variable for ADO token step
+      - name: Get ADO Token via Managed Identity
+        if: steps.check-creds.outputs.has_creds == 'true'
         run: |
           # Get token for Azure DevOps resource
           ADO_TOKEN=$(az account get-access-token --resource "499b84ac-1321-427f-aa17-267ca6975798" --query "accessToken" -o tsv)
           echo "ADO_TOKEN=$ADO_TOKEN" >> $GITHUB_ENV
 
-      - name: "SDK Validation - Status"
+      - name: "SDK Validation Set Status"
         id: sdk-validation-status
         uses: actions/github-script@v7
         with:
