--- a/specification/mysql/resource-manager/Microsoft.DBforMySQL/FlexibleServersTest/preview/2024-12-01-preview/AdvancedThreatProtectionSettings.json
+++ b/specification/mysql/resource-manager/Microsoft.DBforMySQL/FlexibleServersTest/preview/2024-12-01-preview/AdvancedThreatProtectionSettings.json
@@ -3,7 +3,7 @@
   "info": {
     "version": "2024-12-01-preview",
     "title": "MySQLManagementClient",
-    "description": "The Microsoft Azure management API provides create, read, update, and delete functionality for Azure MySQL resources including servers, databases, firewall rules and configurations."
+    "description": "The Microsoft Azure management API provides create, read, update, and delete functionality for Azure MySQL resources including servers, databases, firewall rules and configurations test."
   },
   "host": "management.azure.com",
   "schemes": [
