--- a/specification/mysql/resource-manager/Microsoft.DBforMySQL/FlexibleServersTest/preview/2024-12-01-preview/AdvancedThreatProtectionSettings.json
+++ b/specification/mysql/resource-manager/Microsoft.DBforMySQL/FlexibleServersTest/preview/2024-12-01-preview/AdvancedThreatProtectionSettings.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "version": "2024-12-01-preview",
-    "title": "MySQLManagementClient",
+    "title": "MySQLManagementClient test",
     "description": "The Microsoft Azure management API provides create, read, update, and delete functionality for Azure MySQL resources including servers, databases, firewall rules and configurations test."
   },
   "host": "management.azure.com",
