--- a/eng/pipelines/spec-gen-sdk.yml
+++ b/eng/pipelines/spec-gen-sdk.yml
@@ -25,11 +25,11 @@ parameters:
       - 'stable'
     default: 'beta'
     displayName: 'SDK release type'
-  - name: SkipPullRequestCreation
+  - name: CreatePullRequest
     type: boolean
-    default: true
-    displayName: 'Skip SDK pull request creation'
-    
+    default: false
+    displayName: 'Create SDK pull request'
+
 trigger: none
 
 extends:
@@ -42,4 +42,4 @@ extends:
     ConfigPath: ${{ parameters.ConfigPath }}
     ApiVersion: ${{ parameters.ApiVersion }}
     SdkReleaseType: ${{ parameters.SdkReleaseType }}
-    SkipPullRequestCreation: ${{ parameters.SkipPullRequestCreation }}
+    CreatePullRequest: ${{ parameters.CreatePullRequest }}
